--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d52dbc6e-03a4-4d34-bc30-7d2b0039e51e",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b9b7475c-9094-479f-bab3-c91232c6e438",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a27365aa-9c05-4f08-b8d1-ef1a4c3c2776",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "473e7285-b5c6-44b2-bc34-0485d08ad2ff",
    "metadata": {},
    "outputs": [
@@ -365,9 +365,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R - r-data-science",
+   "display_name": "R - nixpkgs",
    "language": "R",
-   "name": "ir_r-data-science"
+   "name": "ir_nixpkgs"
   },
   "language_info": {
    "codemirror_mode": "r",
